add __UNTESTED__ ethernet framing code and arp address resolver. NEEDS TESTING.

--- a/b2xiaokern/kern/Makefile
+++ b/b2xiaokern/kern/Makefile
@@ -12,8 +12,9 @@ include ../defs.mk
 -include main.dep
 -include task.dep
 -include interrupt.dep
+-include eth.dep
 
-$(PROG).elf: switch.o syscall.o main.o task.o omap3.o interrupt.o ../lib/libbwio.a
+$(PROG).elf: switch.o syscall.o main.o task.o omap3.o interrupt.o eth.o ../lib/libbwio.a
 	$(XCC) $(CFLAGS) $(LDFLAGS) -o $@ $(filter %.o,$^) $(filter %.a,$^) $(LDLIBS)
 
 clean:
