--- a/b2xiaokern/lib/Makefile
+++ b/b2xiaokern/lib/Makefile
@@ -1,16 +1,10 @@
-all: libbwio.a
+S = ..
+
+TARGET = $(S)/bin/libbwio.a
+
+all: $(TARGET)
+
+OBJS = obj/io.o obj/lib.o obj/bwio.o obj/cpu.o obj/libs.o obj/printf.o
 
 include ../defs.mk
--include bwio.dep
--include io.dep
--include lib.dep
--include cpu.dep
--include libs.dep
--include printf.dep
-
-libbwio.a: io.o lib.o bwio.o cpu.o libs.o printf.o
-	$(AR) $(ARFLAGS) $@ $?
-	$(AR) -s $@
-
-clean:
-	-rm -f *.s *.dep *.a *.o
+-include $(OBJS:.o=.dep)
