--- a/kern/Makefile
+++ b/kern/Makefile
@@ -4,8 +4,8 @@ TARGET = $(S)/bin/kern.elf
 
 all: $(TARGET)
 
-OBJS = obj/backtrace.o obj/interrupt.o obj/kmalloc.o obj/main.o obj/omap3.o obj/printk.o obj/switch.o obj/syscall.o obj/task.o obj/userprog.o obj/clock.o obj/console.o
-LIBS = $(S)/bin/libbwio.a $(S)/bin/drivers.a
+OBJS = obj/backtrace.o obj/interrupt.o obj/kmalloc.o obj/main.o obj/omap3.o obj/printk.o obj/switch.o obj/syscall.o obj/task.o obj/userprog.o
+LIBS = $(S)/bin/libs.a $(S)/bin/drivers.a $(S)/bin/servers.a
 
 include ../defs.mk
 -include $(OBJS:.o=.dep)
